removed the todo items from the help section and added line about local storage

--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -27,11 +27,7 @@ li {list-style: none;}
 <div class="show-help">
 <p>Add an item, add a cost, choose the frequency and see the totals at the bottom.</p>
 <p>When there are no cost items the headings are hidden.</p>
-<ul>
-<li>-- TO DO LIST --</li>
-<li>Change delete button to a cross icon?</li>
-<li>Use local storage to save data</li>
-</ul>
+<p>If your browser supports local storage then data is saved automatically but only accessible through this browser and this computer</p>
 </div><!-- end .show-help -->
 </div><!-- end #help -->
 <form>
