--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -27,7 +27,7 @@ li {list-style: none;}
 <div class="show-help">
 <p>Add an item, add a cost, choose the frequency and see the totals at the bottom.</p>
 <p>When there are no cost items the headings are hidden.</p>
-<p>If your browser supports local storage then data is saved automatically but only accessible through this browser and this computer</p>
+<p>If your browser supports local storage then data is saved automatically but only accessible through this browser and this computer.</p>
 </div><!-- end .show-help -->
 </div><!-- end #help -->
 <form>
@@ -61,10 +61,10 @@ li {list-style: none;}
 </table>
 <!-- error messages and dialogs -->
 <div id="dialog-empty" title="Input fields empty">
-  <p>You need to fill in both of the fields.</p>
+  <p>You need to fill in both Item and Cost.</p>
 </div>
 <div id="dialog-number" title="Not a number">
-	<p>You need to enter a number or decimal here.</p>
+	<p>You need to enter a number or a decimal here.</p>
 </div>
 <div id="dialog-delete" title="Delete row?">
 	<p>Are you sure about deleting this row?</p>
@@ -82,14 +82,24 @@ var $addItem = $('#add-item');
 var $addCost = $('#add-cost');
 var $frequency = $('input[type="radio"]:checked');
 var yearlyTotal = 0;
-var multiplier = 12;
 var rowYearlyTotal = 0;
+var $table = $('table');
+$dialogEmpty = $('#dialog-empty');
+$dialogNumber = $('#dialog-number');
+var $dialogDelete = $('#dialog-delete');
+var costPeriod = {
+	'yearly' : 1.0,
+	'quarterly' : 4.0,
+	'monthly' : 12.0,
+	'weekly' : 52.0
+
+};
+var multiplier = costPeriod['monthly'];
 // function to update the yearly totals
 function updateTotals(yearlyTotal) {
-	$('#yearly').find('td').last().html("&pound; " + yearlyTotal.toFixed(2));
-	$('#monthly').find('td').last().html("&pound; " + (yearlyTotal/12.0).toFixed(2));
-	$('#quarterly').find('td').last().html("&pound; " + (yearlyTotal/4.0).toFixed(2));
-	$('#weekly').find('td').last().html("&pound; " + (yearlyTotal/52.0).toFixed(2));
+	$.each(costPeriod, function(index, value) {
+		$('#' + index).find('td').last().html("&pound; " + (yearlyTotal/value).toFixed(2));
+	});
 }
 // set totals to zero
 updateTotals(yearlyTotal);
@@ -102,18 +112,10 @@ $addItem.keyup(function(){
 $addCost.keyup(function(){
 	newCost = $(this).val();
 });
-// cache the value for monthly, weekly or yearly
+// update multiplier value based on radio selection
 $('input[type="radio"]').on('click', function(){
 	frequency = $(this).val();
-	if (frequency === 'weekly') {
-		multiplier = 52;
-	} else if (frequency === 'monthly') {
-		multiplier = 12;
-	} else if (frequency === 'quarterly') {
-		multiplier = 4;
-	} else {
-		multiplier = 1;
-	}
+	multiplier = costPeriod[frequency];
 });
 // give focus to first input - add item
 function focusItem() {
@@ -131,10 +133,10 @@ function updateRowNum() {
 		}
 }
 // start by hiding the tables and error divs
-$('table').hide();
-$('#dialog-empty').hide();
-$('#dialog-number').hide();
-$('#dialog-delete').hide();
+$table.hide();
+$dialogEmpty.hide();
+$dialogNumber.hide();
+$dialogDelete.hide();
 
 // focus the first input
 focusItem();
@@ -155,7 +157,7 @@ $('button').on('click', function() {
 	// if the either or both fields are empty
 	if (newCost === '' || newItem === '') {
 		//alert('You need to fill in both the Cost and Item fields');
-		$('#dialog-empty').dialog({
+		$dialogEmpty.dialog({
 			height: 200,
 			modal: true,
 			close: focusItem()
@@ -164,7 +166,7 @@ $('button').on('click', function() {
 	// if cost is not a number or a decimal
 	} else if(newCost != newCost.match(/^[0-9]+\.?[0-9]*$/)){
 		//alert('Cost needs to be a number');
-		$('#dialog-number').dialog({
+		$dialogNumber.dialog({
 			height: 200,
 			modal: true,
 			close: function() {
@@ -172,7 +174,7 @@ $('button').on('click', function() {
 		});
 		return false;
 	} else {
-	$('table').show();
+	$table.show();
 	$('tbody').closest('#cost-list').append(newRow);
 
 	// add the amount to the yearly total
