added the Oswald font from google fonts

--- a/cost-calculator.html
+++ b/cost-calculator.html
@@ -2,8 +2,9 @@
 <!-- for the time being I want to keep both the css and js embedded -->
 <head>
 <title>Expenses Calculator - Work out your monthly running costs</title>
+<link href='http://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 <style type="text/css">
-#wrapper {margin: 0 auto;width:500px;position: relative;}
+#wrapper {margin: 0 auto;width:500px;position: relative;font-family: 'Oswald', sans-serif;}
 input[type='text'] {margin: 5px 0;}
 label {margin-right: 5px;}
 table {margin-top: 60px;}
